[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/menus/menuBGDesat.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://tools/Mod Packer.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.180392, 0.180392, 0.180392, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Mod Packer" type="Node2D"]
script = ExtResource( 3 )

[node name="BG" type="Sprite" parent="."]
modulate = Color( 0.364706, 0.360784, 0.411765, 1 )
texture = ExtResource( 1 )
centered = false

[node name="Files" type="Panel" parent="."]
margin_left = 337.0
margin_top = 81.0
margin_right = 943.0
margin_bottom = 639.0
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="Files"]
margin_left = 39.0
margin_top = 141.0
margin_right = 571.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 2 )
text = "Mod Packer"
align = 1
valign = 1

[node name="Desc" type="Label" parent="Files"]
margin_left = 39.0
margin_top = 189.0
margin_right = 571.0
margin_bottom = 279.0
custom_fonts/font = SubResource( 3 )
text = "A utility to pack your mods up for other people to enjoy!"
align = 1
valign = 1
autowrap = true

[node name="Success" type="Label" parent="Files"]
visible = false
margin_left = 39.0
margin_top = 429.0
margin_right = 571.0
margin_bottom = 519.0
custom_fonts/font = SubResource( 3 )
text = "Mod has been put in \"res://yourNewMod.pck\""
align = 1
valign = 1
autowrap = true

[node name="ChooseFiles" type="Button" parent="Files"]
margin_left = 161.0
margin_top = 280.0
margin_right = 443.0
margin_bottom = 314.0
text = "Choose files to pack"

[node name="PackUp" type="Button" parent="Files"]
margin_left = 161.0
margin_top = 328.0
margin_right = 443.0
margin_bottom = 362.0
text = "Pack Up"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 222.0
margin_top = 70.0
margin_right = 1059.0
margin_bottom = 650.0
window_title = "Open File(s)"
mode = 1

[node name="Label" type="Label" parent="."]
margin_left = 408.0
margin_top = 122.0
margin_right = 878.0
margin_bottom = 136.0
text = "Tip: Check the console to see the current list of files after choosing them!"
align = 1

[connection signal="pressed" from="Files/ChooseFiles" to="." method="_on_ChooseFiles_pressed"]
[connection signal="pressed" from="Files/PackUp" to="." method="_on_PackUp_pressed"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
